@@ -11,4 +11,17 @@ f2:
 	bra	f1
 	call	f2
 	bra	f2
+
+	call	f3
+	bra	f3
 	.space	16
+	
+	.section .gnu.linkonce.t.test
+beginx:
+	nop
+	call	f1
+	bra	f1
+	call	f2
+	bra	f2
+	call	f3
+	bra	f3
